# no-std-compat2

./: Cargo.toml  README.md  generate.py
.github/workflows/: publish.yml  rust.yml
example-crates/liballoc/: Cargo.toml
example-crates/liballoc/src/: lib.rs
example-crates/libcore/: Cargo.toml
example-crates/libcore/src/: lib.rs
example-crates/macros/: Cargo.toml
example-crates/macros/src/: lib.rs
example-crates/unstable/: Cargo.toml
example-crates/unstable/src/: lib.rs
src/: generated.rs  lib.rs
