[package]
name = "no-std-compat2"
version = "0.4.4"
authors = ["jD91mZM2 <me@krake.one>", "Steve Fan <29133953+stevefan1999-personal@users.noreply.github.com>"]
exclude = [ "example-crates/**/*" ]
description = "A `#![no_std]` compatibility layer that will make porting your crate to no_std *easy*. This fork fixes build upto Rust Edition 2021"
repository = "https://github.com/stevefan1999-personal/no-std-compat2"
categories = [ "no-std" ]
license = "MIT"
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hashbrown = { version = "0.13.2", optional = true }
spin = { version = "0.9.8", optional = true }
cstr_core = { version = "0.2.3", optional = true }
libc = { version = "0.2.97", optional = true }
unix_path = { version = "1.0.1", optional = true }

[dev-dependencies]
libc = "0.2.97"

[profile.dev]
panic = "abort"

[features]
alloc = []
std = []
unstable = []
# This will sadly also add hashbrown even if overriden by std. Cargo
# does not seem to provide any cfg(compat_hash && !std) functionality.
# Luckily, hashbrown is really small.
compat_hash = ["hashbrown"]
compat_sync = ["spin"]
compat_macros = []
compat_cstr = ["cstr_core"]
compat_osraw = ["libc"]
compat_path = ["unix_path"]
compat_guard_unwrap = []
